# diffaero

./: .gitignore  =2.0.0
cfg/env/: oa.yaml  oa_small.yaml
dynamics/: pointmass.py
env/: obstacle_avoidance.py
results/simulation_suite/: ANALYSIS.md  CHAT_LOG.jsonl  CHAT_LOG.md  PRESENTATION.md  obstacle_layouts_3d.html  simulation_suite.csv  simulation_suite.json  simulation_suite_v2.csv  simulation_suite_v2.json  simulation_suite_v3.csv  simulation_suite_v3.json  simulation_suite_v4.csv  simulation_suite_v4.json  simulation_suite_v5.csv  simulation_suite_v5.json  trajectories_3d.html  trajectories_v3.pkl  (+1 more)
ros2_ws/: build_and_launch.sh  capture_output.py  install_deps.sh  setup_sitl.sh
ros2_ws/src/diffaero_px4/: package.xml  setup.cfg  setup.py
ros2_ws/src/diffaero_px4/config/: policy.yaml
ros2_ws/src/diffaero_px4/diffaero_px4/: policy_node.py
ros2_ws/src/diffaero_px4/launch/: sitl.launch.py
ros2_ws/src/diffaero_px4/models/iris_depth_camera/: model.config  model.sdf
ros2_ws/src/diffaero_px4/worlds/: obstacle_field.sdf
script/: capture_trajectories.py  plot_obstacle_layouts.py  plot_obstacle_layouts_3d.py  plot_simulation_suite.py  plot_simulation_suite_compare.py  plot_simulation_suite_compare3.py  plot_simulation_suite_compare4.py  plot_simulation_suite_compare5.py  plot_trajectories_3d.py  plot_v3_vs_v4_trajectories.py  plot_velocity_traces.py  plot_velocity_traces_clean.py  render_chat_log.py  render_trajectory_videos.py  render_trajectory_videos_3d.py  run_simulation_suite.py  run_velocity_traces.py
utils/: assets.py  runner.py  sensor.py
(+1 files in other folders)
